feat/#39: enum 제거